; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_csputils.c_mp_csp_guess_colorspace.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_csputils.c_mp_csp_guess_colorspace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MP_CSP_BT_709 = common dso_local global i32 0, align 4
@MP_CSP_BT_601 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_csp_guess_colorspace(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp sge i32 %5, 1280
  br i1 %6, label %10, label %7

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = icmp sgt i32 %8, 576
  br i1 %9, label %10, label %12

10:                                               ; preds = %7, %2
  %11 = load i32, i32* @MP_CSP_BT_709, align 4
  br label %14

12:                                               ; preds = %7
  %13 = load i32, i32* @MP_CSP_BT_601, align 4
  br label %14

14:                                               ; preds = %12, %10
  %15 = phi i32 [ %11, %10 ], [ %13, %12 ]
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
